--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,13 @@ edition = "2021"
 
 [dependencies]
 rand = "0.8.4"
-rand_core = "0.5"
+rand_core = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.0"
-
+rug = {version = "1.13", features = ["serde"] }
 #using a local version of scicrypt due to serde
 scicrypt = {path = "../scicrypt/scicrypt" }
 scicrypt-he = {path = "../scicrypt/scicrypt-he" }
 scicrypt-traits = {path = "../scicrypt/scicrypt-traits" }
 scicrypt-numbertheory = {path = "../scicrypt/scicrypt-numbertheory" }
-curve25519-dalek = { version = "3", features = ["serde"] }
+curve25519-dalek = { version = "4.0.0-pre.2", features = ["serde"] }
